--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -18,7 +18,7 @@
   "eat-kano": "创！",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "创！",
+  "game-title": "创创创！",
   "game-intro1": "钢琴块玩过吧？",
   "game-intro2": "gogogo！",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
@@ -55,5 +55,5 @@
   "no-message": "这个人很懒什么也没留下",
   "self-record": "{name} 的最高记录. 已上传 {attempts} 次<br/>SCORE:{score} {time}",
   "no-self-record": "没有找到 {name} 的记录(或被过滤)",
-  "no-name-tip": "提示：你玩之前还没有填名字"
+  "no-name-tip": "君の名は？"
 }
