--- a/static/i18n/en.json
+++ b/static/i18n/en.json
@@ -15,12 +15,12 @@
   "ok": "OK",
   "name": "Name",
   "comment": "Msg",
-  "eat-kano": "Eat Kano",
+  "eat-kano": "Posttraumatic Stress Disorder generator",
   "default-dfjk": "DFJK by default",
   "default-20s": "20 seconds by default",
-  "game-title": "Eat Kano",
-  "game-intro1": "Start from the bottom",
-  "game-intro2": "Can you tap 150 times?",
+  "game-title": "PTSD generator",
+  "game-intro1": "Just tap",
+  "game-intro2": "Go Go Go",
   "record-rank": "To record rank(filtered special chars)",
   "no-ad-bad-lang": "No ads or bad language(optional)",
   "time-up": "Time up",
@@ -31,13 +31,13 @@
   "home": "Home",
   "rank": "Rank",
   "repo": "Repo",
-  "text-level-1": "Try again?",
+  "text-level-1": "Standing here,I realize",
   "text-level-2": "Not bad",
   "text-level-3": "Nice",
   "text-level-4": "Awesome",
   "text-level-5": "R U kidding?",
   "time-over": "You've cheated for ",
-  "rank-title": "Eat Kano - Ranking",
+  "rank-title": "Ranking",
   "query-record": "Query Record",
   "day-rank": "Ranking[daily]",
   "week-rank": "Ranking[weekly]",
@@ -55,5 +55,5 @@
   "no-message": "No message",
   "self-record": "{name} highest record. Uploaded {attempts} times<br/>SCORE:{score} {time}",
   "no-self-record": "No record of {name} (Or filtered)",
-  "no-name-tip": "Tip: you won't fill in your name before playing"
+  "no-name-tip": "No pain,no gain.No name,no game. "
 }
